--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,6 +13,8 @@ graphql:
     mapping: /graphql
     enabled: true
     corsEnabled: true
+    websocket:
+      enabled: false
 graphiql:
   mapping: /graphiql
   endpoint: /graphql
